--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
             </ul>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section id="sezione1">
+            <div class="container2">
+                <div class="col1">
+                    <div class="minicontainer1"></div>
+                    <div class="minicontainer2"></div>
+                </div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </section>
+        
+    </main>
     <footer></footer>
 </body>
 </html>
