avanzamenti pre cena

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <section id="sezione1">
             <div class="container2">
                 <div class="col1">
-                    <div class="minicontainer1"></div>
+                    <div class="minicontainer1">
+                        <h2>Get a demo application</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, amet. Ab at doloremque obcaecati corrupti debitis! Sed repudiandae consectetur odit non consequatur repellat, officiis omnis minus nam, voluptate maiores maxime.</p>
+                        <div class="button"><i class="fa-brands fa-apple"></i> App Store</div>
+                    </div>
                     <div class="minicontainer2"></div>
                 </div>
                 <div class="col"></div>
