colonna 1 sezione 1 per cellulare

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad, amet. Ab at doloremque obcaecati corrupti debitis! Sed repudiandae consectetur odit non consequatur repellat, officiis omnis minus nam, voluptate maiores maxime.</p>
                         <div class="button"><i class="fa-brands fa-apple"></i> App Store</div>
                     </div>
-                    <div class="minicontainer2"></div>
+                    <div class="minicontainer2">
+                        <img src="img/phone.png" alt="phone">
+                    </div>
                 </div>
                 <div class="col"></div>
                 <div class="col"></div>
@@ -39,6 +41,8 @@
                 <div class="col"></div>
             </div>
         </section>
+
+        
         
     </main>
     <footer></footer>
